Expanded Cheat Menu:
### Fixed:
- Some mod game rule was interfering with Mission>Game Rules (thanks FURRYHUSKY1000).

Lib:
- Examine>Delete All skips dust plumes.

Mods:

Build Mystery Rewards 0.9:
Fixed issue with more than 6 Crystals.

More Keybinds 1.8:
Log spam from cycle opacity.

github@choggi.org

--- a/Mods ChoGGi/Find Map Locations/todo.txt
+++ b/Mods ChoGGi/Find Map Locations/todo.txt
@@ -1,5 +1,7 @@
 filter underground maps
 
+checkbox to skip the first four breakthroughs for B&B
+
 Combatpigeon96
 could you add a “sort by difficulty” option to it?
 It takes a long time to find a good map with low disasters.
