--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,8 +1,4 @@
 "ID", "Text", "Translation"
-302535920000865, ""
-302535920001674, ""
-302535920001675, ""
-302535920001676, ""
 302535920001677, ""
 302535920001678, ""
 302535920001679, ""
@@ -451,6 +447,10 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920000071, "Show Mods Log"
 302535920000692, "Log is blank (well not anymore)."
 302535920000477, "Clear out the windowed console log."
+302535920001675, "Delete All Objects"
+302535920001676, "Are you sure you wish to delete all <color ChoGGi_red>%s</color> objects? (from active map)"
+302535920000865, "Copy All Text"
+302535920001674, "Copies dialog text to clipboard."
 302535920001667, "Selects examine object"
 302535920000986, "Translated"
 302535920000920, "Examining objs from this dlg will <color ChoGGi_red>%s</color>examine them all in a single dlg."
