Expanded Cheat Menu:
- Fixed preview image.

### Changed:
- Entity spawner has a button to change scale.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001677, ""
-302535920001678, ""
 302535920001679, ""
 302535920001680, ""
 302535920001681, ""
@@ -133,6 +131,9 @@
 302535920001446, "Add Mod Options button to Game Options."
 302535920000044, "Ignore Persist Errors"
 302535920001302, "This prevents persist errors from spamming the log."
+302535920001677, "Entity Size"
+302535920001678, "Change size of Entity.
+Starts at 100% and goes up by 5 (max is 2047), <right_click> to reset to 5% (hold ctrl to go up by 25/50)."
 302535920000908, "Move obj to mouse pos."
 302535920000528, "Move %s by %s."
 302535920000389, "The amount used when a button is pressed (default: %s)."
