--- a/Mods ChoGGi/Fix Mirror Graphics/changes.txt
+++ b/Mods ChoGGi/Fix Mirror Graphics/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Added Terraformed Grass 2: This uses the green texture used as the dome \"grass\" instead of reddish ground.
+
 v0.8
 Asteroids/Underground should all be sandy/rocky (probably).
 
