--- a/Mods ChoGGi/Fix Bugs/todo.txt
+++ b/Mods ChoGGi/Fix Bugs/todo.txt
@@ -1,3 +1,11 @@
+  condition = function(self)
+    return not IsGameRuleActive("NoPicard")
+  end,
+check for tech with breakthrough and save_in = "picard"
+MAKE it a mod option
+
+
+
 Delete new objects 1 object before the object pool limit is hit
 also figure out what I can check/override to not lag the game while checking...
 
@@ -6,3 +14,4 @@ also figure out what I can check/override to not lag the game while checking...
 The current bug means once you have empathy sooner or later all your colonists will have 100 morale,
 because the stacking empathy bonus never goes away from each dome they visit, even if the empath dies.
 (Thanks person whos name I forgot to keep around)
+
