Expanded Cheat Menu:
### Changed:
- Added Tool tips to Menu>Game>UI>UI Transparency.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,5 +1,4 @@
 "ID", "Text", "Translation"
-302535920001679, ""
 302535920001680, ""
 302535920001681, ""
 302535920001682, ""
@@ -453,7 +452,7 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920000692, "Log is blank (well not anymore)."
 302535920000477, "Clear out the windowed console log."
 302535920001675, "Delete All Objects"
-302535920001676, "Are you sure you wish to delete all <color ChoGGi_red>%s</color> objects? (from active map)"
+302535920001676, "Are you sure you wish to delete all <color ChoGGi_red><str></color> objects? (from active map)"
 302535920000865, "Copy All Text"
 302535920001674, "Copies dialog text to clipboard."
 302535920001667, "Selects examine object"
@@ -595,9 +594,9 @@ Press once to clear this examine, again to clear all."
 Which you can then mess around with some more in the console."
 302535920000053, "Attaches"
 302535920000054, "Any objects attached to this object."
-302535920000070, "Shows list of attachments. This <color ChoGGi_green>%s</color> has <color ChoGGi_yellow>%s</color>.
+302535920000070, "Shows list of attachments. This <color ChoGGi_green><str1></color> has <color ChoGGi_yellow><str2></color>.
 
-Press <color ChoGGi_green>%s</color> to hide green markers."
+Press <color ChoGGi_green><str3></color> to hide green markers."
 302535920001437, "Reads file when you focus on the edit box (instead of pressing Read File)."
 302535920001438, "Focus Update"
 302535920000471, "External Editor"
@@ -1544,6 +1543,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920001679, "Tool Tips"
 302535920001665, "Infopanel Toolbar Constrain"
 302535920001666, "Limits size of infopanel toolbar buttons for those that have too many buttons (and they go off panel)."
 302535920001258, "Cleans your Mars of alien shrubbery."
