Expanded Cheat Menu: - ExportMapDataToCSV uses 13 instead of 12 breakthroughs.
Lib:
- Examine Dump text file name is changed to use date instead of screenshot name func.
- ExportMapDataToCSV uses DLC for filename.

Mods:

Fix Bugs 5.4:
St. Elmo's Fire: Stop meteoroids from destroying sinkholes.

Unlimited Wonders 0.5:
Space Elevators weren't queuing cargo (thanks ZaGRAmY).
v0.4
All Space Elevators will import.
Shift works on wonders.

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v5.4
+St. Elmo's Fire: Stop meteoroids from destroying sinkholes.
+
 v5.3
 Changed fix for Colonists Wrong Map Infobar to use a mod option as it's causing an issue trying to delete buggy objects.
 
