--- a/Mods ChoGGi/RC Miner/changes.txt
+++ b/Mods ChoGGi/RC Miner/changes.txt
@@ -1,3 +1,6 @@
+v3.5
+Added Refab.
+
 v3.4
 Miners were turning off when map switched.
 Stockpiles placed when miner on another map were placed on wrong map.
