--- a/Mods ChoGGi/View Colony Map/changes.txt
+++ b/Mods ChoGGi/View Colony Map/changes.txt
@@ -1,3 +1,7 @@
+v2.3
+Changed breakthrough default limit to 13.
+Shows initial location breakthrough info.
+
 v2.2
 Title didn't show underground map name.
 
