Expanded Cheat Menu:
### Added:
- Menu>Debug>Toggle Missing Mods Message (it's been around as a setting to manually change).
 - Use to get rid of "This savegame was loaded in the past without required mods or with an incompatible game version."

### Changed:
- Moved items in Menu>Game>UI to Menu>Game>Interface.
 - Also renamed some items in the menu.
- Added msg to missing mod dialog box showing how to disable it.

Changed terrain:GetHeight to realm:SnapToTerrain
(for reasons)


Mods:

Fix Bugs 5.5
Properly fixed Bottomless Pit and missing Anomaly, but now requires new game.

Omega Unlocks All Slowly 1.1/Omega Unlocks All 0.5:
Added mod option to research as well.

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v5.5
+Properly fixed Bottomless Pit and missing Anomaly, but now requires new game.
+
 v5.4
 St. Elmo's Fire: Stop meteoroids from destroying sinkholes.
 
