--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,7 +1,4 @@
 "ID", "Text", "Translation"
-302535920001728, ""
-302535920001729, ""
-302535920001730, ""
 302535920001731, ""
 302535920001732, ""
 302535920001733, ""
@@ -381,6 +378,7 @@ If this isn't a new install, then see Menu>Help>ECM>Changelog and search for ""T
 302535920000731, "Deutsche Gesellschaft für Rassenhygiene"
 302535920000732, "Childkiller: You evil, evil person."
 302535920000733, "Open a preset in the editor."
+302535920001730, "<color ChoGGi_red>To disable this msg use Menu>Debug>Toggles><color ChoGGi_green><menuitem></color>.</color>"
 302535920001410, "Toggle Visibility"
 302535920000735, "Timer delay skipped"
 302535920001360, "Threads"
@@ -1223,6 +1221,8 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920001728, "Skip Incompatible Mods"
+302535920001729, "Get rid of ""This savegame was loaded in the past without required mods or with an incompatible game version.""."
 302535920001205, "Skip Missing Mods"
 302535920001657, "Stops confirmation dialog about missing mods when loading saved games."
 302535920001658, "Skip Missing DLC"
@@ -1594,7 +1594,7 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
 302535920001679, "Tool Tips"
-302535920001665, "Infopanel Toolbar Constrain"
+302535920001665, "Toggle Infopanel Toolbar Constrain"
 302535920001666, "Limits size of infopanel toolbar buttons for those that have too many buttons (and they go off panel)."
 302535920001258, "Cleans your Mars of alien shrubbery."
 302535920001259, "Delete Bushes Trees"
@@ -1654,7 +1654,7 @@ Unfinished dev tool, don't use in regular saves!"
 302535920000629, "UI Transparency"
 302535920000637, "Video Memory"
 302535920000635, "Terrain Detail"
-302535920000265, "Pulsating Pins Disable"
+302535920000265, "Toggle Pulsating Pins"
 302535920000335, "When true pins will no longer do the pulsating motion (hover over to stop)."
 302535920000982, "Custom"
 302535920000633, "Lights Radius"
@@ -1851,9 +1851,9 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email <
 302535920000666, "Toggle on-screen hints"
 302535920000667, "Don't show hints for this game."
 302535920000668, "Reset on-screen hints"
-302535920000669, "Just in case you wanted to see them again."
-302535920000670, "Never Show Hints"
-302535920000671, "No more hints ever."
+302535920000669, "Just in case you wanted to see them again (Hints that have been dismissed will be shown again)."
+302535920000670, "Toggle Show Hints"
+302535920000671, "No more hints ever (Enable to disable all hints)."
 302535920000672, "About ECM"
 302535920000673, "info dialog."
 302535920000676, "Reset ECM Settings"
