--- a/Mods ChoGGi/More Names/changes.txt
+++ b/Mods ChoGGi/More Names/changes.txt
@@ -1,3 +1,10 @@
 v0.2
 More names:
 Beef Testosterone
+Lisa Marie Nowak
+Susan Kilrain
+Wendy Barrien Lawrence
+Johannes Winkler
+Karl-Heinz Bringer
+Magnus von Braun
+William August Schulze
