--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v6.0
+Removed mod option for PlanetaryAnomalyBreakthroughs
+
 v5.9
 Fix for blank transportation panel in CCC after a certain point in Marsgate mystery (thanks plisken451).
 
