--- a/Mods ChoGGi/Colonist More Hover Info/changes.txt
+++ b/Mods ChoGGi/Colonist More Hover Info/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Added a cache for colonist info (resets when you select a different building, thanks Belmag).
+
 v0.4
 Added support for my Specialist by Experience mod.
 Added extra info to traits.
