--- a/Mods ChoGGi/Fix Bugs/todo.txt
+++ b/Mods ChoGGi/Fix Bugs/todo.txt
@@ -1,3 +1,7 @@
+https://www.reddit.com/r/SurvivingMars/comments/1f178q0/how/
+ tourist gurus seem like a bug
+
+
 condition = function(self)
   return not IsGameRuleActive("NoPicard")
 end,
