Expanded Cheat Menu:
### Changed:
- Renamed Test Story Bits -> Start Story Bits.

### Fixed:
- Set Funding max amount was too much.

Mods:

Add Rivals 0.6:
Never added lib mod dependency.

All Sponsor Buildings 1.6:
Changed lock behind tech mod options to default off.

Construction Show Dome Passage Line 1.9:
Log spam from certain buildings.

Farm Cheats 0.3:
Forgot to have it apply when new ones built (instead of loadgame only).

Fix Bugs 6.6:
GetCheapestTech log spam from a mod.

MDS Laser Cheats 0.3:
Forgot to have it apply when new ones built (instead of loadgame only).

Roaming Animals 0.2:
Added mod options to pick animals.
Made sure it can't go over the max amount.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1291,7 +1291,7 @@ You need my HelperMod installed to be able to use this."
 302535920001418, "Sets the size of the Building/Flight grid."
 302535920001419, "Follow Mouse Grid Trans"
 302535920001420, "How transparent the Building/Flight grid is."
-302535920001359, "Test activate a story bit."
+302535920001359, "Activate a story bit."
 302535920001358, "Group"
 302535920001382, "Game Time"
 302535920001368, "Sound FX"
