--- a/Mods ChoGGi/All Sponsor Buildings/changes.txt
+++ b/Mods ChoGGi/All Sponsor Buildings/changes.txt
@@ -1,3 +1,6 @@
+v1.6
+Changed lock behind tech mod options to default off.
+
 v1.5
 Sponsor buildings not showing up when tech req is turned off (thanks Bueno).
 
