--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v6.8
+Fixed Rivals Trade Minerals mod hiding Exotic Minerals from lander UI (thanks DouViction).
+
 v6.7
 Fixed bug with missing dlc (thanks Boothy).
 
