--- a/Mods ChoGGi/Oxygen Management/changes.txt
+++ b/Mods ChoGGi/Oxygen Management/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+log spam.
+
 v0.4
 Colonist oxygen usage added to mod options (defaults lowered).
 Stop colonists using air when domes are opened.
