Expanded Cheat Menu: - ToggleFuncHook defaults to everything instead of just mod paths.
Mods:

Fix Bugs 7.1:
Too much Cave-in rubble will cause lag when new rubble tries to spawn.

Show Dust Affected 0.4:
Added toggle button to Tribbys (with mod option to hide them).

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v7.1
+Too much Cave-in rubble will cause lag when new rubble tries to spawn.
+
 v7.0
 Black screen in second new game window when using a Modded sponsor and missing DLC.
 
