Expanded Cheat Menu: ### Added: - ECM.Debug.Toggles>Show Console Errors: Show extra debug errors in console.  - This was already part of ECM and enabled by default, it's turned off by default now.
### Changed:
- SetGameSpeed has a couple faster options to really speed up waiting.
- A couple of the console menu items can be right-clicked to paste func into console.

Lib:
### Examine:
- Shows more info for some tables.

Mods:

All Sponsor Buildings 1.7:
Lock behind tech was borked (thanks pakha3023).

Blank Sponsor:
Sponsor/Commander profile with no extras added (buildings/etc).
Because it's no fun just doing that, this also does random mission goals for a bit of variety.
There's also a mod option to have random goals for any sponsor.

Fix Bugs 7.3:
Fix for Storybits disappearing from the notifications list instead of popping up a dialog.
Log spam from a modded trait without an id.
v7.2
Underground prefabs will now properly spawn underground instead of needing a load game to fix them.
Partial fix for a storybit not giving a breakthrough (it doesn't actually active so you won't get anything anyways).

Project Phoenix No Renegades 0.2:
Sightly optimized code.

Real Time Clock 1.1:
Make sure it doesn't spawn too many threads if playing around in the menus.

Universal Depot Defaults:
I added code to set indiv depots, but the desired amount is always 2 above what it should be.
I don't want to remove the code in case I figure it out, so I commented out the depots for now.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001735, ""
-302535920001736, ""
 302535920001737, ""
 302535920001738, ""
 302535920001739, ""
@@ -1225,6 +1223,8 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920001735, "Show Console Errors"
+302535920001736, "Show extra debug errors in console."
 302535920001732, "Toggle Mouse Grid Position"
 302535920001728, "Skip Incompatible Mods"
 302535920001729, "Get rid of ""This savegame was loaded in the past without required mods or with an incompatible game version.""."
