--- a/Mods ChoGGi/Universal Depot Defaults/todo.txt
+++ b/Mods ChoGGi/Universal Depot Defaults/todo.txt
@@ -1,3 +1,4 @@
 
 Crian Box 20 hours ago 
-the default desired level would be great for the individual depots as well as the universal. My fingers ache with moving the sliders so often.
+the default desired level would be great for the individual depots as well as the universal. 
+My fingers ache with moving the sliders so often.
