--- a/Mods ChoGGi/Fix Bugs/todo.txt
+++ b/Mods ChoGGi/Fix Bugs/todo.txt
@@ -15,3 +15,14 @@ also figure out what I can check/override to not lag the game while checking...
 The current bug means once you have empathy sooner or later all your colonists will have 100 morale,
 because the stacking empathy bonus never goes away from each dome they visit, even if the empath dies.
 (Thanks person whos name I forgot to keep around)
+
+
+
+storybits no follow up
+Free Will
+
+storybits not starting
+Morning Star
+
+storybits not starting maybe
+Dust Melancholy
