Expanded Cheat Menu:
### Added:
- ECM.Game.Interface.Toggle Use All Loading Screens: Some DLC replaces loading screens with their own, enable to use all of them.

Mods:

Automatic Stirling Generators:
Automatically open and close your Stirlings. See mod options to pick shifts.

Change Skin Wasp Drones 0.2:
Changed it to use a fixed list of skins instead of searching each time the mod is loaded.

Faster UI 0.6:
Added a delay mod option and increased it to hopefully help with pin/build going invisible after awhile.

Fix Bugs 7.4:
Thanks Dark Master for digging around and testing storybits (and documenting them on wiki).
Storybit Blank Slate doesn't remove any applicants.
Storybit Fhtagn! Fhtagn! Option 2 makes all colonists cowards instead of only religious ones.
Storybit Dust Sickness: Deaths doesn't apply morale penalty.
Log spam from GetCurrentLightModel.

github@choggi.org

--- a/Mods ChoGGi/Faster UI/changes.txt
+++ b/Mods ChoGGi/Faster UI/changes.txt
@@ -1,3 +1,6 @@
+v0.6
+Added a delay mod option and increased it to hopefully help with pin/build going invisible after awhile.
+
 v0.5
 Changed mod option names.
 Map zoom shouldn't go outside the map area anymore.
