--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001737, ""
-302535920001738, ""
 302535920001739, ""
 302535920001740, ""
 302535920001741, ""
@@ -1598,6 +1596,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920001737, "Toggle Use All Loading Screens"
+302535920001738, "Some DLC replaces loading screens with their own, enable to use all of them."
 302535920001679, "Tool Tips"
 302535920001665, "Toggle Infopanel Toolbar Constrain"
 302535920001666, "Limits size of infopanel toolbar buttons for those that have too many buttons (and they go off panel)."
