Expanded Cheat Menu: ### Changed: - Object Cloner no longer centres in a hex.
### Fixed:
- When cloning barrel dome at non-default angle grass texture gets stuck on ground.

Lib:
- Added CopyProperties(): Lets you skip certain properties when copying.

### Examine:
- Holding Ctrl and closing an examine dialog by pressing X will no longer close the console log dialog.

Mods:

Remove Landscaping Limit 0.9:
Added button to landscape construction sites to reset the size of the landscaping area (new ones not existing).

Roaming Animals 0.4:
Made them pinnable.

github@choggi.org

--- a/Mods ChoGGi/Remove Landscaping Limit/changes.txt
+++ b/Mods ChoGGi/Remove Landscaping Limit/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Added button to landscape construction sites to reset the size of the landscaping area (new ones not existing).
+
 v0.8
 enlarge/shrink override wasn't working (error in log).
 
