Expanded Cheat Menu:
### Added:
- ECM.Debug.Storybits>Toggle Story Bit Log: Show Storybit info in console log, and extra info in g_StoryBitsLog.

### Removed:
- Toggle UI transparency checkbox from console log window.

Lib:

- Added checkbox to toggle UI transparency to my dialogs.
- Added DoSomethingQuestion(): Generic warning msg.

### Examine:
- Added Tool Bar>Clear Table: Remove all entries from this table.
- Removed toggle UI transparency button.

Mods:

Wide Area Forestation 0.6:
Disabled Plant Interval for now.
Added mod option to workaround extra large Max Sizes.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,10 +1,4 @@
 "ID", "Text", "Translation"
-302535920001739, ""
-302535920001740, ""
-302535920001741, ""
-302535920001742, ""
-302535920001743, ""
-302535920001744, ""
 302535920001745, ""
 302535920001746, ""
 302535920001747, ""
@@ -287,6 +281,8 @@ If this isn't a dumping site then waste rock will not be emptied."
 302535920000009, "Missing Scenario Name"
 302535920000010, "Missing Name"
 302535920000011, "Missing Description"
+302535920001739, "Last chance!"
+302535920001740, "Are you sure you want to proceed with <str>?"
 302535920001574, "Crashes on XBOX!"
 302535920001571, "The way I test the CSV file means there might be some ""non-error"" errors added here.
 It's a tradeoff between erroneous errors and the game locking up."
@@ -465,6 +461,8 @@ https://www.lua.org/manual/5.3/manual.html#pdf-debug.sethook"
 302535920000071, "Show Mods Log"
 302535920000692, "Log is blank (well not anymore)."
 302535920000477, "Clear out the windowed console log."
+302535920001741, "Clear Table"
+302535920001742, "Remove all entries from this table."
 302535920001680, "Loading resources"
 302535920001681, "Class name"
 302535920001682, "Building Template"
@@ -1221,6 +1219,8 @@ Only works on colonists that have yet to spawn (maybe)."
 Not permanent."
 302535920000447, "Change the age at which colonists die (applies to newly arrived and born colonists as well)."
 302535920000448, "I'm afraid it could be 9/11 times 1,000."
+302535920001743, "Toggle Story Bit Log"
+302535920001744, "Show Storybit info in console log, and extra info in g_StoryBitsLog."
 302535920001735, "Show Console Errors"
 302535920001736, "Show extra debug errors in console."
 302535920001732, "Toggle Mouse Grid Position"
