--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v7.*
+Changed Colonists Wrong Map Infobar mod option to disabled by default.
+
 v7.5
 Fix for whatever odd thing Mars Underground mod is doing with presets.
 Unlock Artificial Sun for refabbing.
