Expanded Cheat Menu:
### Fixed:
- A few more notifications showing table: ****.

Mods:

Add 5 Times The Resource To Deposits 0.7:
Updated for picard.
Added mod options to pick amount, set grades, only change one deposit.

Unlock All Achievements 0.4:
Made sure ignore dlc works.
Added some random delays.

github@choggi.org

--- a/Mods ChoGGi/Add 5 Times The Resource To Deposits/changes.txt
+++ b/Mods ChoGGi/Add 5 Times The Resource To Deposits/changes.txt
@@ -1,3 +1,7 @@
+v0.7
+Updated for picard.
+Added mod options to pick amount, set grades, only change one deposit.
+
 v0.6
 Armstrong (thanks misukhanov).
 
