--- a/Mods ChoGGi/Allow BB Buildings/todo.txt
+++ b/Mods ChoGGi/Allow BB Buildings/todo.txt
@@ -1,1 +1,3 @@
-is it possible to allow to turn on and off wheat appears in mod options? with this you don't even need asteroids also a bit silly i can build solar panels underground in the pitch black 
+is it possible to allow to turn on and off what appears in mod options?
+with this you don't even need asteroids also a bit silly
+i can build solar panels underground in the pitch black 
