Expanded Cheat Menu:
- Code cleanup

Mods:

Build Menu Deposits 0.4:
Always be the same order.

Enable Console 0.9:
Won't log spam when my lib mod isn't installed.

Mononoke Shishigami 0.4:
Growth when cursor stopped.
Stopped growth in domes and underground as it's laggy.
Actually it's laggy even when near domes.
I thought lights, but even with no shadows on them it still happens?

The Parish Boy's Progress 0.4:
Hopefully fixed all the issues with it.
Mod options to disable mod, and let them stay in Nurseries.

github@choggi.org

--- a/Mods ChoGGi/Enable Console/changes.txt
+++ b/Mods ChoGGi/Enable Console/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Won't log spam when my lib mod isn't installed.
+
 v0.8
 Added code I use in ECM to allow pasting in more complicated code (no more "not understood").
 Removes ` when using Tilde to open console.
