--- a/Mods ChoGGi/The Parish Boys Progress/changes.txt
+++ b/Mods ChoGGi/The Parish Boys Progress/changes.txt
@@ -1,3 +1,7 @@
+v0.4
+Hopefully fixed all the issues with it.
+Mod options to disable mod, and let them stay in Nurseries.
+
 v0.3
 Picard update...
 
